<resources>
    <string name="app_name">Celebrity Quiz</string>
    
    <!-- Main Menu -->
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="main_menu">Main Menu</string>
    
    <!-- Game Screen -->
    <string name="question_format">Question %1$d of %2$d</string>
    <string name="celebrity_question">Who is this celebrity?</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="back_to_main">Back to Main Menu</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong! The correct answer is: %1$s</string>
    <string name="game_complete">Game complete! You got %1$d out of %2$d correct!</string>
    <string name="select_answer">Please select an answer</string>
    
    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>
    <string name="reset_game">Reset Game</string>
    <string name="number_of_guesses">Number of Guesses:</string>
    <string name="theme_selection">Select Theme:</string>
    <string name="theme_default">Default Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="save_settings">Save Settings</string>
    <string name="game_reset_success">Game has been reset successfully</string>
    <string name="settings_saved">Settings saved</string>
    
    <!-- About Screen -->
    <string name="version">Version 1.0</string>
    <string name="app_description">Celebrity Guessing Game is a fun quiz app where users can test their knowledge of famous celebrities. The game presents images and challenges players to identify the correct celebrity from multiple options.</string>
    <string name="project_date">Project Date: April 2025</string>
    <string name="development_team">Development Team</string>
    <string name="team_members">Juan Gonzalez Mallizo\nMaria Paula Mora Arizabaleta\nMustafa Zamani\nNafiyad Adane\nPhuong Nam Pham</string>
    <string name="copyright">© 2025 All Rights Reserved</string>
</resources>
